Ensure that firehose-reliability tests release pipeline lock
[#149935008]

Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -1282,6 +1282,11 @@ jobs:
       CLIENT_SECRET: {{science-firehose-reliability-client-secret}}
       SKIP_CERT_VERIFY: true
     timeout: 10m
+  ensure:
+    put: pipeline-lock
+    params:
+      release: pipeline-lock
+  on_failure: *slack-failure-alert
 
 - name: start-incidents
   serial: true
