Update pws-us pipeline to run smokes every 10m
[#149192219]

Signed-off-by: Wesley Jeanette <wjeanette@pivotal.io>

--- a/pipelines/loggregator/pws-us.yml
+++ b/pipelines/loggregator/pws-us.yml
@@ -193,7 +193,7 @@ jobs:
   plan:
   - get: loggregator-ci
   - get: scalable-syslog-release
-  - get: 1h
+  - get: 10m
     trigger: true
   - task: v2-drain
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
@@ -217,7 +217,7 @@ jobs:
   plan:
   - get: loggregator-ci
   - get: scalable-syslog-release
-  - get: 1h
+  - get: 10m
     trigger: true
   - task: v2-drain-loggregator
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
