--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -16,7 +16,7 @@ run:
   - |
     #/usr/bin/env ruby
 
-    require_relative "#{Dir.pwd}/loggregator-ci/tasks/scripts/datadog/client.rb"
+    require "#{Dir.pwd}/loggregator-ci/tasks/scripts/datadog/client.rb"
 
     settings = JSON.parse(File.read('deployment-settings/settings.json'))
 
