--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -22,9 +22,9 @@ run:
 
     title = 'Capacity Planning Scale'
     text = %Q{Capacity Planning environment has been configured with the following:
-    ```
-    #{JSON.pretty_generate(settings)}
-    ```}
+
+    #{JSON.pretty_generate(settings).split('\n').join('\n    ')}
+    }
     tags = settings.each_with_object({}) { |(k, v), o| o[k.downcase] = v }
 
     puts "Title: #{title}"
