Fix formatting for datadog event

--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -21,10 +21,11 @@ run:
     settings = JSON.parse(File.read('deployment-settings/settings.json'))
 
     title = 'Capacity Planning Scale'
-    text = %Q{Capacity Planning environment has been configured with the following:
+    text = %Q{%%% \n
+    Capacity Planning environment has been configured with the following:
 
         #{JSON.pretty_generate(settings).split('\n').join('\n    ')}
-    }
+    \n %%%}
     tags = settings.each_with_object({}) { |(k, v), o| o[k.downcase] = v }
 
     puts "Title: #{title}"
