Fix formatting for datadog event

--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -24,9 +24,10 @@ run:
     text = %Q{%%% \n
     Capacity Planning environment has been configured with the following:
 
-    #{settings.map { |k, v| "#{k}: *#{v}*}.join('\n')}
+    #{settings.map { |k, v| "#{k}: *#{v}*"}.join('\n')}
 
     \n %%%}
+
     tags = settings.each_with_object({}) { |(k, v), o| o[k.downcase] = v }
 
     puts "Title: #{title}"
