--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -23,7 +23,7 @@ run:
     title = 'Capacity Planning Scale'
     text = %Q{Capacity Planning environment has been configured with the following:
 
-    #{settings}
+    #{JSON.pretty_generate(settings)}
     }
 
     tags = settings.each_with_object({}) { |(k, v), o| o[k.downcase] = v }
