Make bosh-hm-forwarder bump-release-submodule job private
[#150064912]

Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/loggregator/bosh-hm-forwarder.yml
+++ b/pipelines/loggregator/bosh-hm-forwarder.yml
@@ -43,7 +43,7 @@ jobs:
 
 - name: bump-release-submodule
   serial: true
-  public: true
+  public: false
   plan:
   - aggregate:
     - get: bosh-hm-forwarder-release
