--- a/tasks/science/firehose-reliability-test.yml
+++ b/tasks/science/firehose-reliability-test.yml
@@ -7,5 +7,7 @@ inputs:
 - name: loggregator
 - name: loggregator-ci
 - name: cf-credentials
+params:
+  INSTANCE_COUNT: 1
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
