Update firehose reliability deploy script to push worker and server
[#149743965]

Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/pws-us.yml
+++ b/pipelines/loggregator/pws-us.yml
@@ -292,3 +292,4 @@ jobs:
       PASSWORD: {{pws-password}}
       CLIENT_ID: {{pws-firehose-reliability-client-id}}
       CLIENT_SECRET: {{pws-firehose-reliability-client-secret}}
+      WORKER_INSTANCE_COUNT: 14
