--- a/tasks/science/firehose-reliability-test.yml
+++ b/tasks/science/firehose-reliability-test.yml
@@ -8,6 +8,6 @@ inputs:
 - name: loggregator-ci
 - name: cf-credentials
 params:
-  INSTANCE_COUNT: 1
+  WORKER_INSTANCE_COUNT: 1
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
