Make firehose reliability control server port configurable
[#149743965]

Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator/pws-us.yml
+++ b/pipelines/loggregator/pws-us.yml
@@ -293,3 +293,4 @@ jobs:
       CLIENT_ID: {{pws-firehose-reliability-client-id}}
       CLIENT_SECRET: {{pws-firehose-reliability-client-secret}}
       WORKER_INSTANCE_COUNT: 14
+      APP_WS_PORT: 4443
