--- a/tasks/science/firehose-reliability-test.yml
+++ b/tasks/science/firehose-reliability-test.yml
@@ -9,5 +9,6 @@ inputs:
 - name: cf-credentials
 params:
   WORKER_INSTANCE_COUNT: 1
+  APP_WS_PORT: 443
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
