--- a/tasks/science/firehose-reliability-test.yml
+++ b/tasks/science/firehose-reliability-test.yml
@@ -11,4 +11,9 @@ params:
   WORKER_INSTANCE_COUNT: 1
   APP_WS_PORT: 443
 run:
-  path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
+  path: bash
+  args:
+  - -c
+  - |
+    loggregator-ci/tasks/scripts/firehose-reliability-test.py
+    exit 1
