--- a/pipelines/loggregator/pws-us.yml
+++ b/pipelines/loggregator/pws-us.yml
@@ -158,7 +158,7 @@ jobs:
       CF_APP_DOMAIN: cfapps.io
       CF_SYSTEM_DOMAIN: run.pivotal.io
       CF_USERNAME: {{pws-username}}
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_API_KEY: "((datadog-loggregator-api-key)) ((datadog-prod-api-key))"
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "https"
       JOB_NAME: "https-teardown"
@@ -181,7 +181,7 @@ jobs:
       CF_APP_DOMAIN: cf-tcpapps.io
       CF_SYSTEM_DOMAIN: run.pivotal.io
       CF_USERNAME: {{pws-username}}
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_API_KEY: "((datadog-loggregator-api-key)) ((datadog-prod-api-key))"
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "syslog"
       JOB_NAME: "syslog-teardown"
@@ -205,7 +205,7 @@ jobs:
       CF_APP_DOMAIN: cfapps.io
       CF_SYSTEM_DOMAIN: run.pivotal.io
       CF_USERNAME: {{pws-username}}
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_API_KEY: "((datadog-loggregator-api-key)) ((datadog-prod-api-key))"
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "https"
       JOB_NAME: "https-no-teardown"
@@ -229,22 +229,8 @@ jobs:
       CF_APP_DOMAIN: cf-tcpapps.io
       CF_SYSTEM_DOMAIN: run.pivotal.io
       CF_USERNAME: {{pws-username}}
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_API_KEY: "((datadog-loggregator-api-key)) ((datadog-prod-api-key))"
       DRAIN_VERSION: "2.0"
-      DRAIN_TYPE: "syslog"
-      JOB_NAME: "syslog-no-teardown"
-    timeout: 15m
-  - task: v2-drain-cloudops
-    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
-    params:
-      TEARDOWN: false
-      CF_ORG: cf-lamb
-      CF_PASSWORD: {{pws-password}}
-      CF_SPACE: development
-      CF_APP_DOMAIN: cf-tcpapps.io
-      CF_SYSTEM_DOMAIN: run.pivotal.io
-      CF_USERNAME: {{pws-username}}
-      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "syslog"
       JOB_NAME: "syslog-no-teardown"
