Fetch go-loggregator deps before test

--- a/pipelines/loggregator/go-loggregator.yml
+++ b/pipelines/loggregator/go-loggregator.yml
@@ -34,6 +34,6 @@ jobs:
 
           cd $GOPATH/src/code.cloudfoundry.org/go-loggregator
 
-          go get github.com/onsi/ginkgo/ginkgo
+          go get ./...
 
           ./scripts/test
