--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -1315,12 +1315,12 @@ jobs:
       - task: start-incidents-loggregator-elect
         file: loggregator-ci/tasks/science/schedule-turbulence.yml
         params:
-          TURBULENCE_API_URL: https://130.211.192.204:6868
+          TURBULENCE_API_URL: https://130.211.192.204:6868 # Public IP for `turbulence_api` job. Found in GCP console.
           VARS_FILE_PATH: "gcp/science/loggregator-elect/deployment-vars.yml"
       - task: start-incidents-loggregator-latest
         file: loggregator-ci/tasks/science/schedule-turbulence.yml
         params:
-          TURBULENCE_API_URL: https://35.192.15.233:6868
+          TURBULENCE_API_URL: https://35.192.15.233:6868 # Public IP for `turbulence_api` job. Found in GCP console.
           VARS_FILE_PATH: "gcp/science/loggregator-latest/deployment-vars.yml"
   ensure:
     put: pipeline-lock
