--- a/tasks/capacity-planning/build-settings.yml
+++ b/tasks/capacity-planning/build-settings.yml
@@ -3,6 +3,8 @@ image_resource:
   type: docker-image
   source:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+inputs:
+- name: loggregator-ci
 outputs:
 - name: deployment-settings
 params:
