capacity planning pipeline now uses automated rampup task

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -206,95 +206,6 @@ jobs:
       params:
         repository: updated-vars-store
         rebase: true
-    - task: capacity-planning-deploy
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-            tag: v2.2.0
-        inputs:
-        - name: bbl-state
-        - name: loggregator-capacity-planning-release
-        - name: updated-vars-store
-        - name: deployment-settings
-        outputs:
-        - name: updated-capacity-planning-vars-store
-        run:
-          path: /bin/bash
-          args:
-          - "-c"
-          - |
-            #!/bin/bash
-            set -ex
-
-            SETTINGS_FILE="$PWD/deployment-settings/settings.json"
-
-            API_VERSION=$(cat $SETTINGS_FILE | jq .API_VERSION --raw-output)
-            CLIENT_ID=$(cat $SETTINGS_FILE | jq .CLIENT_ID --raw-output)
-            EVENT_COUNTER_COUNT=$(cat $SETTINGS_FILE | jq .EVENT_COUNTER_COUNT --raw-output)
-            METRICS_PER_SECOND=$(cat $SETTINGS_FILE | jq .METRICS_PER_SECOND --raw-output)
-            METRIC_EMITTER_COUNT=$(cat $SETTINGS_FILE | jq .METRIC_EMITTER_COUNT --raw-output)
-            SYSTEM_DOMAIN=$(cat $SETTINGS_FILE | jq .SYSTEM_DOMAIN --raw-output)
-
-            BBL_DIR=$PWD/updated-vars-store/gcp/loggregator-capacity-planning
-
-            pushd updated-vars-store/gcp/loggregator-capacity-planning
-              export BOSH_CLIENT=`bbl director-username`
-              export BOSH_CLIENT_SECRET=`bbl director-password`
-              export BOSH_CA_CERT=`bbl director-ca-cert`
-              export BOSH_ENVIRONMENT=`bbl director-address`
-
-              export DATADOG_API_KEY=`bosh int datadog-vars.yml --path=/datadog_key`
-              export CLIENT_SECRET=`bosh int deployment-vars.yml --path=/capacity_planning_authenticator_secret`
-            popd
-
-            cat <<EOT >> /tmp/overrides.yml
-            - type: replace
-              path: /instance_groups/name=event_counter/instances?
-              value: $EVENT_COUNTER_COUNT
-            - type: replace
-              path: /instance_groups/name=metric_emitter/instances?
-              value: $METRIC_EMITTER_COUNT
-            - type: replace
-              path: /instance_groups/name=metric_emitter/jobs/name=metric_emitter/properties/metric_emitter/api_version?
-              value: $API_VERSION
-            - type: replace
-              path: /instance_groups/name=metric_emitter/jobs/name=metric_emitter/properties/metric_emitter/metrics_per_second?
-              value: $METRICS_PER_SECOND
-            EOT
-
-            pushd loggregator-capacity-planning-release
-              bosh create-release
-              bosh upload-release --rebase
-
-              bosh -d loggregator_capacity_planning deploy -n manifests/loggregator-capacity-planning.yml \
-                -v system_domain=$SYSTEM_DOMAIN \
-                -v datadog_api_key=$DATADOG_API_KEY \
-                -v client_id=$CLIENT_ID \
-                -v client_secret=$CLIENT_SECRET \
-                -l $BBL_DIR/deployment-vars.yml \
-                -o /tmp/overrides.yml \
-                --vars-store $BBL_DIR/capacity-planning-vars.yml
-            popd
-
-            pushd updated-vars-store
-              if [ ! "$(git status --porcelain)" = "" ]; then
-                git config user.email "cf-loggregator@pivotal.io"
-                git config user.name "Loggregator CI"
-                git add .
-                git commit -m "Updating capacity planning deployment vars"
-              else
-                echo "No changes to commit"
-              fi
-            popd
-
-            rsync -ac updated-vars-store/ updated-capacity-planning-vars-store/.
-    - put: deployments-loggregator-with-changes
-      params:
-        repository: updated-capacity-planning-vars-store
-        rebase: true
     - task: create-org-and-space
       file: loggregator-ci/tasks/create-org-and-space.yml
       params:
@@ -302,73 +213,8 @@ jobs:
         ORG: capacity-planning
         SPACE: capacity-planning
         SYSTEM_DOMAIN: loggregator-capacity-planning.cf-app.com
-    - task: deploy-log-emitter
-      config:
-        image_resource:
-          type: docker-image
-          source:
-            repository: loggregator/base
-        platform: linux
-        inputs:
-          - name: vars-store
-          - name: loggregator-capacity-planning-release
-          - name: deployment-settings
-        params:
-          VARS_STORE_FILE: gcp/loggregator-capacity-planning/deployment-vars.yml
-          DATADOG_API_KEY: {{datadog-dev-api-key}}
-        run:
-          path: bash
-          args:
-          - -c
-          - |
-            #!/bin/bash
-            set -ex
-
-            SETTINGS_FILE="$PWD/deployment-settings/settings.json"
-
-            INSTANCES_PER_APP=$(cat $SETTINGS_FILE | jq .INSTANCES_PER_APP --raw-output)
-            LOGS_PER_SECOND=$(cat $SETTINGS_FILE | jq .LOGS_PER_SECOND --raw-output)
-            LOG_BYTES=$(cat $SETTINGS_FILE | jq .LOG_BYTES --raw-output)
-            NUMBER_OF_APPS=$(cat $SETTINGS_FILE | jq .NUMBER_OF_APPS --raw-output)
-            ORG=$(cat $SETTINGS_FILE | jq .ORG --raw-output)
-            SPACE=$(cat $SETTINGS_FILE | jq .SPACE --raw-output)
-            SYSTEM_DOMAIN=$(cat $SETTINGS_FILE | jq .SYSTEM_DOMAIN --raw-output)
-
-            CF_PASSWORD=$(bosh int vars-store/$VARS_STORE_FILE --path=/cf_admin_password)
-            CF_USERNAME=admin
-            CLIENT_ID="capacity_planning_authenticator"
-            CLIENT_SECRET=$(bosh int vars-store/$VARS_STORE_FILE --path=/capacity_planning_authenticator_secret)
-
-            cf login -a api.$SYSTEM_DOMAIN -u $CF_USERNAME -p $CF_PASSWORD -o $ORG -s $SPACE --skip-ssl-validation
-
-            flags="--logs-per-second=$LOGS_PER_SECOND"
-            flags="$flags --log-bytes=$LOG_BYTES"
-            flags="$flags --datadog-api-key=$DATADOG_API_KEY"
-            flags="$flags --client-id=$CLIENT_ID"
-            flags="$flags --client-secret=$CLIENT_SECRET"
-
-            export GOPATH="$PWD/loggregator-capacity-planning-release"
-            pushd loggregator-capacity-planning-release/src/code.cloudfoundry.org/log_emitter
-              go build
-
-              for app in $(cf apps | grep log_emitter | awk '{print $1}'); do
-                cf delete $app -r -f
-              done
-
-              for i in $(seq $NUMBER_OF_APPS); do
-                cf push "log_emitter-$i" \
-                  -b binary_buildpack \
-                  -c "./log_emitter $flags" \
-                  -i $INSTANCES_PER_APP \
-                  -m 64M \
-                  -k 128M \
-                  -u none
-              done
-            popd
-    - task: setup-datadog-event
-      file: loggregator-ci/tasks/capacity-planning/setup-datadog-event.yml
-      params:
-          DATADOG_API_KEY: {{datadog-dev-api-key}}
+    - task: automated-rampup-test
+      file: loggregator-ci/tasks/capacity-planning/automated-rampup-test.yml
 
 - name: datadog-nozzle-deploy
   serial: true
