Update capacity planning params

--- a/tasks/capacity-planning/build-settings.yml
+++ b/tasks/capacity-planning/build-settings.yml
@@ -10,19 +10,21 @@ outputs:
 params:
   API_VERSION:
   CLIENT_ID:
-  DIEGO_CELL_INSTANCE_COUNT:
-  DOPPLER_INSTANCE_COUNT:
+  DIEGO_CELL_COUNT:
+  DOPPLER_COUNT:
+  END_RPS:
   EVENT_COUNTER_COUNT:
-  INSTANCES_PER_APP:
-  LOGS_PER_SECOND:
-  LOG_API_INSTANCE_COUNT:
-  LOG_BYTES:
-  METRICS_PER_SECOND:
+  LOG_API_COUNT:
+  LOG_EMITTER_COUNT:
+  LOG_EMITTER_INSTANCE_COUNT:
+  LOG_SIZE:
   METRIC_EMITTER_COUNT:
-  NUMBER_OF_APPS:
   ORG:
   ROUTER_COUNT:
   SPACE:
+  START_RPS:
+  STEPS:
   SYSTEM_DOMAIN:
+  TEST_EXECUTION_MINUTES:
 run:
   path: loggregator-ci/tasks/capacity-planning/build-settings.rb
