--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -128,20 +128,19 @@ jobs:
       params:
         API_VERSION: v1
         CLIENT_ID: capacity_planning_authenticator
-        DIEGO_CELL_INSTANCE_COUNT: 2
-        DOPPLER_INSTANCE_COUNT: 1
+        DIEGO_CELL_COUNT: 2
+        DOPPLER_COUNT: 1
         EVENT_COUNTER_COUNT: 2
-        INSTANCES_PER_APP: 2
-        LOGS_PER_SECOND: 125
-        LOG_API_INSTANCE_COUNT: 1
-        LOG_BYTES: 1000
-        METRICS_PER_SECOND: 500
+        LOG_API_COUNT: 1
+        LOG_EMITTER_COUNT: 2
+        LOG_EMITTER_INSTANCES_COUNT: 2
+        LOG_SIZE: 1000
         METRIC_EMITTER_COUNT: 2
-        NUMBER_OF_APPS: 4
         ORG: capacity-planning
         ROUTER_COUNT: 4
         SPACE: capacity-planning
         SYSTEM_DOMAIN: loggregator-capacity-planning.cf-app.com
+        TEST_EXECUTION_MINUTES: 15
     - task: copy-ops-files
       config:
         platform: linux
@@ -165,9 +164,9 @@ jobs:
 
             SETTINGS_FILE="$PWD/deployment-settings/settings.json"
 
-            DOPPLER_INSTANCE_COUNT=$(cat $SETTINGS_FILE | jq .DOPPLER_INSTANCE_COUNT --raw-output)
-            LOG_API_INSTANCE_COUNT=$(cat $SETTINGS_FILE | jq .LOG_API_INSTANCE_COUNT --raw-output)
-            DIEGO_CELL_INSTANCE_COUNT=$(cat $SETTINGS_FILE | jq .DIEGO_CELL_INSTANCE_COUNT --raw-output)
+            DOPPLER_COUNT=$(cat $SETTINGS_FILE | jq .DOPPLER_COUNT --raw-output)
+            LOG_API_COUNT=$(cat $SETTINGS_FILE | jq .LOG_API_COUNT --raw-output)
+            DIEGO_CELL_COUNT=$(cat $SETTINGS_FILE | jq .DIEGO_CELL_COUNT --raw-output)
             ROUTER_COUNT=$(cat $SETTINGS_FILE | jq .ROUTER_COUNT --raw-output)
 
             cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
@@ -177,16 +176,16 @@ jobs:
             cat <<EOT >> ops-files/capacity-planning-config.yml
             - type: replace
               path: /instance_groups/name=doppler/instances
-              value: $DOPPLER_INSTANCE_COUNT
+              value: $DOPPLER_COUNT
             - type: replace
               path: /instance_groups/name=router/instances
               value: $ROUTER_COUNT
             - type: replace
               path: /instance_groups/name=log-api/instances
-              value: $LOG_API_INSTANCE_COUNT
+              value: $LOG_API_COUNT
             - type: replace
               path: /instance_groups/name=diego-cell/instances
-              value: $DIEGO_CELL_INSTANCE_COUNT
+              value: $DIEGO_CELL_COUNT
             - type: replace
               path: /releases/name=loggregator
               value:
