--- a/pipelines/loggregator/release.yml
+++ b/pipelines/loggregator/release.yml
@@ -17,6 +17,13 @@ resources:
     branch: master
     private_key: {{loggregator-key}}
 
+- name: loggregator-backport
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/loggregator.git
+    branch: &backport-branch back-ports/1.11
+    private_key: {{loggregator-key}}
+
 - name: loggregator-final-release-develop
   type: git
   source:
@@ -32,6 +39,16 @@ resources:
   source:
     uri: git@github.com:cloudfoundry/loggregator.git
     branch: master
+    private_key: {{loggregator-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: loggregator-final-release-backport
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/loggregator.git
+    branch: *backport-branch
     private_key: {{loggregator-key}}
     ignore_paths:
     - .final_builds
@@ -280,6 +297,99 @@ jobs:
   - put: loggregator-final-release-develop
     params:
       repository: create-final-release/loggregator-develop
+      rebase: false
+  - put: loggregator-github-release-drafts
+    params:
+      name: github-release/name
+      tag: github-release/tag
+      body: github-release/body
+      globs:
+      - github-release/*.tgz
+
+- name: loggregator-create-backport-release
+  serial: true
+  plan:
+  - get: loggregator-backport
+    trigger: false
+  - task: create-backport
+    config:
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/base
+      platform: linux
+      params:
+        S3_ACCESS_KEY: {{s3-access-key}}
+        S3_SECRET_KEY: {{s3-secret-key}}
+        SSH_KEY: {{loggregator-key}}
+        NEW_VERSION: 89.2
+        BRANCH_NAME: *backport-branch
+      inputs:
+      - name: loggregator-backport
+      outputs:
+      - name: github-release
+      - name: create-final-release
+      run:
+        path: bash
+        args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+
+            # establish version/tag strings
+            new_version="$NEW_VERSION"
+            tag_name="v$new_version"
+            backport_branch="$BRANCH_NAME"
+
+            # write out github release files
+            echo "Loggregator $new_version" > github-release/name
+            echo $tag_name > github-release/tag
+            echo "TBD" > github-release/body
+
+            # setup git for committing
+            git config --global user.email "cf-loggregator@pivotal.io"
+            git config --global user.name "Loggregator CI"
+
+            # setup ssh for reading from github
+            eval "$(ssh-agent -s)"
+            mkdir -p ~/.ssh
+            echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+            ssh-add <(echo "$SSH_KEY")
+
+            # build final release on backport branchd
+            pushd loggregator-backport
+              git checkout "$backport_branch"
+
+              # setup private.yml used by `create-release --final`
+              cat << EOF > config/private.yml
+            ---
+            blobstore:
+              provider: s3
+              options:
+                bucket_name: loggregator-release-blobs
+                access_key_id: $S3_ACCESS_KEY
+                secret_access_key: $S3_SECRET_KEY
+                credentials_source: static
+            EOF
+
+              # create final release and commit artifcats
+              bosh -n create-release --sha2 --final \
+                --tarball ../github-release/release.tgz \
+                --version $new_version
+              git add .
+              git commit -m "Create final release"
+
+              final_release_abbrev=$(git rev-parse --abbrev-ref HEAD)
+              final_release_sha=$(git rev-parse HEAD)
+              git tag "$tag_name" $final_release_sha
+            popd
+
+            # copy repos into output
+            cp -r loggregator-backport create-final-release
+  - put: loggregator-final-release-backport
+    params:
+      repository: create-final-release/loggregator-backport
       rebase: false
   - put: loggregator-github-release-drafts
     params:
